fix(af-core): rewrite dataplane enricher against owned SPI DTOs